Possibility to generate a certificate that covers multiple domains #380